@@ -1,9 +1,10 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
-WISH? monotonic clocks times/GetTickCount for coarse corrections?
 
+WISH? monotonic clocks times/GetTickCount for coarse corrections?
 	- ev_once now passes both timeout and io to the callback if both
           occur concurrently, instead of giving timeouts precedence.
+	- disable EV_USE_INOTIFY when sys/inotify.h is too old.
 
 3.44 Mon Sep 29 05:18:39 CEST 2008
 	- embed watchers now automatically invoke ev_loop_fork on the
